# business-card-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  test.yml
src/business_card_generator/: __init__.py
src/business_card_generator/core/: __init__.py  card_data_model.py  export_engine.py
src/business_card_generator/models/: __init__.py  card.py
src/business_card_generator/ui/: __init__.py  card_designer.py  card_table_view.py  details_bar.py  main_window.py
tests/: __init__.py  conftest.py  test_models.py
